--- a/stylesheet.css
+++ b/stylesheet.css
@@ -126,7 +126,7 @@ ul {
   text-align: center;  
 }
 
-.article-icon {
+article {
   font-size: 20px;
   width: 33.3333333%;
   padding: 20px 50px 20px 50px;
@@ -138,7 +138,7 @@ ul {
   justify-content: center;
 }
 
-.article-icon:hover {
+article:hover {
   transform: translateY(10px);
   cursor: pointer;
   opacity: 0.8;
@@ -271,7 +271,7 @@ footer {
     flex-wrap: wrap;
   }
   
-  .article-icon {
+  article {
     font-size: 20px;
     width: 50%;
     padding: 20px 50px 20px 50px;
@@ -282,7 +282,7 @@ footer {
     justify-content: center;
   }
   
-  .article-icon:hover {
+  article:hover {
     transform: translateY(10px);
     cursor: pointer;
     opacity: 0.8;
